[gd_scene load_steps=3 format=3 uid="uid://player123"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_player"]
[ext_resource type="Script" path="res://scripts/inventory.gd" id="2_inventory"]

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pickup"]
radius = 40.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 1
collision_mask = 2
script = ExtResource("1_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_player")

[node name="Body" type="Polygon2D" parent="."]
color = Color(0.3, 0.7, 1, 1)
polygon = PackedVector2Array(-12, -8, -8, -12, 0, -14, 8, -12, 12, -8, 14, 0, 12, 8, 8, 12, 0, 14, -8, 12, -12, 8, -14, 0)

[node name="Flashlight" type="PointLight2D" parent="."]
color = Color(1, 0.95, 0.85, 1)
energy = 1.2
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.8)
texture_scale = 2.5

[node name="AmbientLight" type="PointLight2D" parent="."]
color = Color(0.6, 0.7, 1, 1)
energy = 0.25
texture_scale = 0.8

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="PickupShape" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_pickup")

[node name="Inventory" type="Node" parent="."]
script = ExtResource("2_inventory")
